--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <li>The Complete iOS App Development Bootcamp</li>
     <li>The Complete Web Development Bootcamp</li>
   </ul>
-  <img src="C:\Users\jefftomoko25\Desktop\Web\HTML - Personal Site\Images\Hobbies.jpg" alt="My Hobbies">
+  <img src="https://cdn.pixabay.com/photo/2014/07/31/23/49/guitarist-407212_960_720.jpg" alt="My Hobbies">
 
   <br>
   <br>
@@ -101,7 +101,7 @@
 
     <li>Selling stuff on eBay</li>
 
-    <img src="images/ebay.png"> <!-- This is a sample were you can save an image in your own .html folder together with index.html -->
+    <img src="https://cdn.pixabay.com/photo/2015/08/09/08/58/ebay-881310_960_720.jpg"> <!-- This is a sample were you can save an image in your own .html folder together with index.html -->
 
     <br>
     <a href="contact.html">My Contact Details</a>
