--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <img src="https://cdn.pixabay.com/photo/2015/08/09/08/58/ebay-881310_960_720.jpg"> <!-- This is a sample were you can save an image in your own .html folder together with index.html -->
 
     <br>
-    <a href="contact.html">My Contact Details</a>
+    <a href="Contact.html">My Contact Details</a>
 
     <h4>Following are my <strong><em>"Things"</em></strong></em> to bring on my travel</h4>
 
