--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
   <h1>My Contact Details</h1>
   <p>My Fictional Address</p>
   <p>09054191399</p>
-  <p>virayjefferson1982@yaoo.com</p>
+  <p>virayjefferson1982@yahoo.com</p>
   <hr>
   <form action="mailto:tomoko.jeff@gmail.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
