--- a/Contact.html
+++ b/Contact.html
@@ -4,15 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me</title>
+
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <h1>My Contact Details</h1>
-  <p>My Fictional Address</p>
+  <h2>My Contact Details</h2>
+  <p>Makati Philippines</p>
   <p>09054191399</p>
   <p>virayjefferson1982@yahoo.com</p>
   <hr>
-  <form action="mailto:tomoko.jeff@gmail.com" method="post" enctype="text/plain">
+  <form action="mailto:virayjefferson1982@yahoo.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
     <input type="text" name="yourName" value="">
     <br>
