--- a/hobbies.html
+++ b/hobbies.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
+
+
 <head>
   <meta charset="utf-8">
   <title>My Hobbies</title>
+
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
+
+
+<strong>
+  <h2>My Hobbies</h2>
+</strong>
+
 
 <body>
   <ol>
@@ -15,6 +26,9 @@
     <li><a href="https://www.youtube.com/watch?v=H8NsJ-HXbDY" target="_blank">Dancing</a></li>
 
   </ol>
+
+
 </body>
+
 
 </html>
