--- a/index.html
+++ b/index.html
@@ -1,152 +1,73 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 
 <head>
   <meta charset="utf-8">
-  <title>⭖ Jeff's pogi webpage ⭖</title>
-
-  <!-- below is a sample code  of CSS   (for background color) -->
-  <!-- here in style tag, you can put all CSS code just like html tag -->
-  <style>
-
-    body {
-      background-color: #a8d3da;
-    }
-
-    hr {
-      border-style: none;
-      border-top-style: dotted;
-      border-color: grey;
-      border-width: 4px;
-      width: 5%;
-
-
-    }
-
-
-
-    table {
-      border-width: 3px;
-      background-color: #aquamarine;
-    }
-  </style>
-
+  <title>Jeff's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRo6fXkOucKBDEkE4NRb4d4bn4KptrDXTy8Xz8FORyV2IN4_vcM" alt="Jeff Ibias Viray Profile Picture">
-
-  <!-- to put hyperlink on text, this is the code"ANCHOR" <a> and hyperlink reference href element -->
-  <!-- <a href= "https..."> TEXT</a>" -->
-  <h1><a href="https://www.facebook.com/virayjefferson">JEFFERSON VIRAY</a></h>
-  </h1>
-
-  <h4>HTML Cheatsheet</h4>
-  <a DOWNLOAD href="http://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf" target="_blank">DOWNLOAD HERE</a>
-
-  <p> <em> He is an ordinary person who wishes to become a <strong> Successful</strong> entrepreneur.</em> </p>
-  <!-- <i> means italic or to italizise the text while <em> is to emphasize the text. -->
-  <!-- <b> or bold and <strong> for strong , to strengten the text. I prefer to <use></use> strong rather than bold. -->
-  <p>As you can see, he is currently in Japan workinga s a factory worker. He does have 2 jobs. One as a meat slicer and the other one is a quality inspector.</p>
-
-  <hr>
-
-  <h3> SKILLS </h3>
-  <table>
+<table cellspacing="20">
+  <tr>
+    <td><img src="https://media-exp1.licdn.com/dms/image/C5103AQEwubDh03QzuQ/profile-displayphoto-shrink_200_200/0?e=1589414400&v=beta&t=WU8rNXMpcTu2mO_hmrEyQ9q8JCf52NL0qWBUTtJcQY4" alt="Jeff profile picture"></td>
+    <td>
+      <h1>Jeff Viray</h1>
+      <p><em>Founder and CTO of <strong><a href="https://www.linkedin.com/in/jivsolutions-translation-services-9112ab1a3/?originalSubdomain=jp">JIVSolutions</a></strong>.</em></p>
+      <p>I am an iOS and Web Developer. I ❤️ coffee too.</p>
+    </td>
+  </tr>
+</table>
+<hr>
+<h3>Books and Teaching</h3>
+<ul>
+  <li>The Complete iOS App Development Bootcamp</li>
+  <li>The Complete Web Development Bootcamp</li>
+</ul>
+<hr>
+<h3>Work Experience</h3>
+<table cellspacing="10">
+  <thead>
     <tr>
-      <td> ios Development </td>
-      <td>⭐⭐⭐⭐⭐</td>
-      <br>
+      <th>Dates</th>
+      <th>Work</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>2009-2010</td>
+      <td>Researcher at The Institute of Cognitive Neurosciences</td>
     </tr>
     <tr>
-      <td>>Web Development</td>
-      <td>⭐⭐⭐⭐</td>
+      <td>2010-2013</td>
+      <td>Lead Developer at Tempo App</td>
     </tr>
-    <br>
     <tr>
-      <td>Photography</td>
-      <td>⭐⭐⭐</td>
+      <td>2013-2015</td>
+      <td>Clinical Doctor at the National Health Service</td>
     </tr>
-
-  </table>
-
-  </hr>
-
-  <p> <em></p>Depp had a supporting role in Oliver Stone's 1986 Vietnam War film Platoon and played the title character in the 1990 romantic dark fantasy Edward Scissorhands. He later found box office success in the adventure film Sleepy Hollow
-  (1999), the
-  swashbuckler film series <strong>Pirates of the Caribbean (2003–present)</strong>, the fantasy films Charlie and the Chocolate Factory (2005) and Alice in Wonderland (2010), the animated comedy western Rango (2011) (in which he voiced the title
-  character), and
-  most recently Fantastic Beasts: The Crimes of Grindelwald (2018). Depp has collaborated on nine films with director, producer and friend Tim Burton. Depp was inducted as a Disney Legend in 2015.[8] He has performed in numerous musical groups,
-  including forming the rock supergroup Hollywood Vampires along with Alice Cooper and Joe Perry. </em></p>
-
-  <hr>
-
-
-  <h3> Books and Teaching</h3>
-  <ul>
-    <li>The Complete iOS App Development Bootcamp</li>
-    <li>The Complete Web Development Bootcamp</li>
-  </ul>
-  <img src="https://cdn.pixabay.com/photo/2014/07/31/23/49/guitarist-407212_960_720.jpg" alt="My Hobbies">
-
-  <br>
-  <br>
-  <br>
-  <!--   I created new (.html) page and put "My Hobbies" to that page. Then, going back here at index.html, creating code <a href="hobbies.html">My Hobbies</a> to link my hobbies page -->
-
-  <a href="hobbies.html">My Hobbies</a>
-  <br>
-
-  <ul>
-
-    <li>Selling stuff on eBay</li>
-
-    <img src="https://cdn.pixabay.com/photo/2015/08/09/08/58/ebay-881310_960_720.jpg"> <!-- This is a sample were you can save an image in your own .html folder together with index.html -->
-
-    <br>
-    <a href="Contact.html">My Contact Details</a>
-
-    <h4>Following are my <strong><em>"Things"</em></strong></em> to bring on my travel</h4>
-
-    <ul>
-      <!-- This "<ul> Unordered List creates a bullet list -->
-      <li>Jacket</li>
-      <li>Baggage
-      <li>T-Shirt</li>
-      <li>Pants</li>
-      <li>Bimpo</li>
-      <li>Paper Bag
-        <!-- Look, the closing </li> tag is not placed here! -->
-        <ol>
-          <li>Tissue</li>
-          <li>Soap</li>
-      </li> <!-- Here is the closing </li> tag -->
-      <li>Paper sheet
-        <!-- here's the other </li> tag is not placed here! -->
-        <ul>
-          <li>Wet paper</li>
-          <li>Dry paper</li>
-          <li>Feminine wash</li>
-      </li> <!-- Here is the closing </li> tag -->
-      <li>Shoes</li>
-    </ul>
-  </ul>
-
-  <h4>Other things to bring</h4>
-
-  <ul>
-    <li>Chocolate</li>
-    <li>Noodles</li>
-  </ul>
-
-  <ol>
-    <li>black bag</li>
-    <li>Artificial hair</li>
-  </ol>
-
-
-
-
+  </tbody>
+</table>
+<hr>
+<h3>Skills</h3>
+<table cellspacing="10">
+  <tr>
+    <td>iOS Development</td>
+    <td>⭐️⭐️⭐️⭐️⭐️</td>
+  </tr>
+  <tr>
+    <td>Web Development</td>
+    <td>⭐️⭐️⭐️⭐️⭐️</td>
+  </tr>
+  <tr>
+    <td>Photography</td>
+    <td>⭐️⭐️</td>
+  </tr>
+</table>
+<hr>
+<a href="hobbies.html">My Hobbies</a>
+<br></br>
+<a href="Contact.html">Contact Me</a>
 </body>
 
 </html>
