--- a/index.html
+++ b/index.html
@@ -3,71 +3,106 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Jeff's Personal Site</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Jefferson Ibias Viray</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
+  <!--The above link is for fonts purposes located at www.https://fonts.google.com/-->
+
 </head>
 
+
+
 <body>
-<table cellspacing="20">
-  <tr>
-    <td><img src="https://media-exp1.licdn.com/dms/image/C5103AQEwubDh03QzuQ/profile-displayphoto-shrink_200_200/0?e=1589414400&v=beta&t=WU8rNXMpcTu2mO_hmrEyQ9q8JCf52NL0qWBUTtJcQY4" alt="Jeff profile picture"></td>
-    <td>
-      <h1>Jeff Viray</h1>
-      <p><em>Founder and CTO of <strong><a href="https://www.linkedin.com/in/jivsolutions-translation-services-9112ab1a3/?originalSubdomain=jp">JIVSolutions</a></strong>.</em></p>
-      <p>I am an iOS and Web Developer. I ❤️ coffee too.</p>
-    </td>
-  </tr>
-</table>
-<hr>
-<h3>Books and Teaching</h3>
-<ul>
-  <li>The Complete iOS App Development Bootcamp</li>
-  <li>The Complete Web Development Bootcamp</li>
-</ul>
-<hr>
-<h3>Work Experience</h3>
-<table cellspacing="10">
-  <thead>
-    <tr>
-      <th>Dates</th>
-      <th>Work</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>2009-2010</td>
-      <td>Researcher at The Institute of Cognitive Neurosciences</td>
-    </tr>
-    <tr>
-      <td>2010-2013</td>
-      <td>Lead Developer at Tempo App</td>
-    </tr>
-    <tr>
-      <td>2013-2015</td>
-      <td>Clinical Doctor at the National Health Service</td>
-    </tr>
-  </tbody>
-</table>
-<hr>
-<h3>Skills</h3>
-<table cellspacing="10">
-  <tr>
-    <td>iOS Development</td>
-    <td>⭐️⭐️⭐️⭐️⭐️</td>
-  </tr>
-  <tr>
-    <td>Web Development</td>
-    <td>⭐️⭐️⭐️⭐️⭐️</td>
-  </tr>
-  <tr>
-    <td>Photography</td>
-    <td>⭐️⭐️</td>
-  </tr>
-</table>
-<hr>
-<a href="hobbies.html">My Hobbies</a>
-<br></br>
-<a href="Contact.html">Contact Me</a>
+
+
+  <!--The <div> element is often used as a container
+for other HTML elements to style them with CSS or
+to perform certain tasks with JavaScript
+
+DIV doesn't do anything unless you use CSS on it
+
+-->
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+
+    <h1>I'm Jefferson.</h1>
+    <!--This CSS code "<span></span>" is for underlining specific letters-->
+    <h2 class="programmer">
+      <p>a <span class="pro">pro</span>grammer.</p>
+    </h2>
+
+    <!--
+Common Inline elements
+  span   - <span>
+  Images - <img>
+  anchor -  <a>
+-->
+
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img class="ProfilePic" src="https://media-exp1.licdn.com/dms/image/C5103AQEwubDh03QzuQ/profile-displayphoto-shrink_200_200/0?e=1590624000&v=beta&t=PSiMazdh92HVTtQ1PaW_FZzqgB7ZccNVpLb4WpmF0g0" alt="Jefferson-Viray">
+      <h2>Hello.</h2>
+
+      <p>I have had extensive work experience in office environments, the retail sector,
+        <br>and service industries, giving me varied skills and the ability to work with many different types of people.
+        <br> I believe I could fit easily into your said job.
+
+        <br></br>I am a conscientious person who works hard and pays attention to detail. I'm flexible,
+        <br>quick to pick up new skills and eager to learn from others.
+        <br> I also have lots of ideas and enthusiasm.
+        <br> I'm keen to work for a company with a
+        great
+        reputation and high profile like the said job.</p>
+
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="translator" src="https://media.giphy.com/media/b6mKPane44Kd2/giphy.gif" alt="translator">
+        <h3>Translator</h3>
+        <p>Highly skilled and experienced Translator with a strong background in translating Legal Documents in English, Tagalog and Japanese. Bringing forth an excellent command of these languages, and a track record of impeccable proofreading,
+          editing, and translating. Adept in accurately assessing the context of material, and translating it in an understandable and appropriate way. Highly skilled in Legal Terminology and Processes, helping clients to better understand their
+          rights and position. Bringing forth a positive work ethic and a commitment to efficiency and integrity.</p>
+      </div>
+      <div class="skill-row">
+        <img class="Webdev" src="https://media.giphy.com/media/TP3wcnAjon8cg/giphy.gif" alt="Web-Developer">
+        <h3>Web developer</h3>
+        <p class="translator-description">Web Developer with 8 years of experience in designing and developing user interfaces, testing, debugging, and training staff within eCommerce technologies. Proven ability in optimizing web functionality that
+          improve data retrieval and workflow efficiencies.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Thanks for being awesome!</h3>
+      <p>We have received your message and would like to thank you for writing to us. If your inquiry is urgent, please use the telephone number listed below to talk to one of our staff members. Otherwise, we will reply by email as soon as possible.
+      </p>
+      <a class="btn" href="mailto:virayjefferson1982@yahoo.com">CONTACT ME</a>
+    </div>
+    <br<><br>
+
+  </div>
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/jefferson-viray-a3478094/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/viray_jeff016">Twitter</a>
+    <a class="footer-link" href="https://www.facebook.com/JIVSolutions/">Website</a>
+    <p class="copyright">© 2020 Jefferson Ibias Viray.</p>
+  </div>
+
+
+
+  <!--Folowing below is Display and span Elements examples-->
+
+
+
 </body>
 
 </html>
