--- a/index.html
+++ b/index.html
@@ -49,18 +49,19 @@ Common Inline elements
       <img class="ProfilePic" src="https://media-exp1.licdn.com/dms/image/C5103AQEwubDh03QzuQ/profile-displayphoto-shrink_200_200/0?e=1590624000&v=beta&t=PSiMazdh92HVTtQ1PaW_FZzqgB7ZccNVpLb4WpmF0g0" alt="Jefferson-Viray">
       <h2>Hello.</h2>
 
-      <p>I have had extensive work experience in office environments, the retail sector,
-        <br>and service industries, giving me varied skills and the ability to work with many different types of people.
-        <br> I believe I could fit easily into your said job.
-
-        <br></br>I am a conscientious person who works hard and pays attention to detail. I'm flexible,
-        <br>quick to pick up new skills and eager to learn from others.
-        <br> I also have lots of ideas and enthusiasm.
-        <br> I'm keen to work for a company with a
+      <p class="intro">I have had extensive work experience in office environments, the retail sector,
+        and service industries, giving me varied skills and the ability to work with many different types of people.
+        I believe I could fit easily into your said job.
+        <br><br>
+        I am a conscientious person who works hard and pays attention to detail. I'm flexible,
+        >quick to pick up new skills and eager to learn from others.
+        I also have lots of ideas and enthusiasm.
+        I'm keen to work for a company with a
         great
         reputation and high profile like the said job.</p>
 
     </div>
+    <br>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
@@ -82,7 +83,7 @@ Common Inline elements
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Thanks for being awesome!</h3>
-      <p>We have received your message and would like to thank you for writing to us. If your inquiry is urgent, please use the telephone number listed below to talk to one of our staff members. Otherwise, we will reply by email as soon as possible.
+      <p class="contact-message">We have received your message and would like to thank you for writing to us. If your inquiry is urgent, please use the telephone number listed below to talk to one of our staff members. Otherwise, we will reply by email as soon as possible.
       </p>
       <a class="btn" href="mailto:virayjefferson1982@yahoo.com">CONTACT ME</a>
     </div>
