--- a/index.html
+++ b/index.html
@@ -85,10 +85,9 @@ Common Inline elements
       <h3>Thanks for being awesome!</h3>
       <p class="contact-message">We have received your message and would like to thank you for writing to us. If your inquiry is urgent, please use the telephone number listed below to talk to one of our staff members. Otherwise, we will reply by email as soon as possible.
       </p>
-      <a class="btn" href="mailto:virayjefferson1982@yahoo.com">CONTACT ME</a>
+      <a href="mailto:virayjefferson1982@yahoo.com" class="btn">CONTACT ME</a>
     </div>
-    <br<><br>
-
+    <br><br>
   </div>
 
   <div class="bottom-container">
